<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/main_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/maze_generator_text"
        android:textAlignment="center"
        android:textColor="@color/secondary_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_marginTop="40dp"
        tools:padding="10dp" />


    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_height="250dp">

        <TextView
            android:id="@+id/tv_rows"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_below="@+id/text_edit_rows"
            android:layout_marginStart="25dp"
            android:layout_marginTop="29dp"
            android:text="@string/tv_rows_text"
            android:textSize="18sp"
            tools:paddingRight="10dp"
            tools:paddingStart="10dp" />

        <EditText
            android:id="@+id/text_edit_rows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/text_edit_columns"
            android:layout_alignParentTop="true"
            android:layout_marginStart="-3dp"
            android:layout_marginTop="63dp"
            android:hint="@string/number_rows_text"
            android:inputType="number" />

        <TextView
            android:id="@+id/tv_columns"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignStart="@+id/tv_rows"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="71dp"
            android:text="@string/tv_number_cols"
            android:textSize="18sp"
            tools:paddingRight="10dp"
            tools:paddingStart="10dp" />

        <EditText
            android:id="@+id/text_edit_columns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="17dp"
            android:layout_marginTop="124dp"
            android:layout_toEndOf="@+id/tv_rows"
            android:hint="@string/number_columns_text"
            android:inputType="number" />

        <Button
            android:id="@+id/enter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/tv_columns"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="195dp"
            android:layout_marginTop="180dp"
            android:layout_marginBottom="178dp"
            android:background="@color/secondary_text"
            android:onClick="startMaze"
            android:text="@string/enter_button_text"
            android:textColor="@android:color/white" />
    </RelativeLayout>



    <WebView
        android:id="@+id/image_runner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>